--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ networks:
 volumes:
   mongodb:
   redis:
-  mysql:
+  mysql_data:
   rabbitmq:
 
 services:
@@ -47,7 +47,7 @@ services:
     container_name: mysql
     restart: always
     volumes:
-    - mysql:/var/lib/mysql
+    - mysql_data:/var/lib/mysql
 
   shipping:
     image: pavandivi/shipping:v1
